force-app/main/default/objects/ORDER_H__c/ORDER_H__c.object-meta.xml
<CustomObject>
    <label>주문내역</label>
    <nameField>
        <displayFormat>OH-{00000000}</displayFormat>
        <label>SFDC Key</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>