force-app/main/default/objects/ORDER_H__c/fields/CHECK__c.field-meta.xml
<CustomField>
    <fullName>CHECK__c</fullName>
    <defaultValue>&quot;N&quot;</defaultValue>
    <label>입고확인</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>