force-app/main/default/objects/ORDER_H__c/fields/CONFIRM__c.field-meta.xml
<CustomField>
    <fullName>CONFIRM__c</fullName>
    <defaultValue>&quot;N&quot;</defaultValue>
    <label>확정</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>