force-app/main/default/objects/ORDER_H__c/fields/EBELN__c.field-meta.xml
<CustomField>
    <fullName>EBELN__c</fullName>
    <externalId>true</externalId>
    <label>주문번호_3000센터</label>
    <length>20</length>
    <type>Text</type>
</CustomField>