force-app/main/default/objects/ORDER_H__c/fields/EBELN_R__c.field-meta.xml
<CustomField>
    <fullName>EBELN_R__c</fullName>
    <label>주문번호_5000센터</label>
    <length>10</length>
    <type>Text</type>
</CustomField>