force-app/main/default/objects/ORDER_H__c/fields/fm_EBELN_link__c.field-meta.xml
<CustomField>
    <fullName>fm_EBELN_link__c</fullName>
    <formula>HYPERLINK(&quot;/?sort=&quot; &amp; EBELN__c , &quot;&quot;, &apos;_self&apos;) &amp;
HYPERLINK(&quot;/&quot; &amp; Id, EBELN__c , &apos;_self&apos;)</formula>
    <label>주문번호_3000센터(link)</label>
    <type>Text</type>
</CustomField>