force-app/main/default/objects/ORDER_H__c/fields/RESWK__c.field-meta.xml
<CustomField>
    <fullName>RESWK__c</fullName>
    <label>출고플랜트</label>
    <length>4</length>
    <type>Text</type>
</CustomField>