force-app/main/default/objects/ORDER_H__c/fields/ru_ORDER_D_Count__c.field-meta.xml
<CustomField>
    <fullName>ru_ORDER_D_Count__c</fullName>
    <label>품목 수</label>
    <summaryFilterItems>
        <field>ORDER_D__c.LOEKZ__c</field>
        <operation>notEqual</operation>
        <value>X</value>
    </summaryFilterItems>
    <summaryForeignKey>ORDER_D__c.ORDER_H__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>