force-app/main/default/objects/ORDER_H__c/fields/SHIP_TYP__c.field-meta.xml
<CustomField>
    <fullName>SHIP_TYP__c</fullName>
    <label>직배송여부</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>배송</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>직송</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>