force-app/main/default/objects/ORDER_H__c/fields/TEST_TIME__c.field-meta.xml
<CustomField>
    <fullName>TEST_TIME__c</fullName>
    <label>TEST TIME</label>
    <type>Time</type>
</CustomField>