force-app/main/default/objects/ORDER_H__c/fields/XDATS__c.field-meta.xml
<CustomField>
    <fullName>XDATS__c</fullName>
    <label>호출날짜 (YYYYMMDD)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>