force-app/main/default/objects/ORDER_H__c/fields/XTIMS__c.field-meta.xml
<CustomField>
    <fullName>XTIMS__c</fullName>
    <label>호출시간 (HHMISS)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>