force-app/main/default/objects/ORDER_H__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>EBELN__c</columns>
    <columns>CHECK__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>전체 주문내역</label>
</ListView>