force-app/main/default/objects/ORDER_H__c/listViews/importToDoList.listView-meta.xml
<ListView>
    <fullName>importToDoList</fullName>
    <columns>fm_EBELN_link__c</columns>
    <columns>EBELN_R__c</columns>
    <columns>ru_ORDER_D_Count__c</columns>
    <columns>SHIP_TYP__c</columns>
    <columns>CHECK__c</columns>
    <columns>CONFIRM__c</columns>
    <columns>xmsgs__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONFIRM__c</field>
        <operation>equals</operation>
        <value>N</value>
    </filters>
    <label>미확정 주문내역</label>
</ListView>